platform/service-mesh/istio/security/authorization/deny-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: workloads
spec: {}
